--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -546,12 +546,9 @@ if not conf.CheckHeader(['porttime.h']):
 
 #Check for PortMIDI & PortTime
 
-# if not conf.CheckLib(['portmidi', 'libportmidi']):
-# #if not conf.CheckHeader(['portmidi.h']) or not conf.CheckLib(['portmidi']):
-
-# 	print "Did not find PortMidi or it\'s development headers, exiting!"
-# 	Exit(1)
-env.Append(LIBS="portmidi")
+if not conf.CheckLib(['portmidi', 'libportmidi']):
+ 	print "Did not find PortMidi or it\'s development headers, exiting!"
+ 	Exit(1)
 
 if not platform == 'osx':   # OSX doesn't need PortTime for some reason
 	if not conf.CheckLib(['porttime', 'libporttime']):
