--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -547,7 +547,20 @@ if not conf.CheckLib('ogg'):
 
 #hack: check for these here, before conf.Finish happens
 have_mp4 = conf.CheckLib('mp4v2') or conf.CheckLib('mp4')
-have_faad = conf.CheckLib('faad')
+
+# We have to check for libfaad version 2.6 or 2.7. In libfaad
+# version 2.7, the type for the samplerate is unsigned long*,
+# while in 2.6 the type is uint32_t*. We can use the optional
+# call parameter to CheckLibWithHeader to build a test file to
+# check which one this faad.h supports.
+have_faad_26 = conf.CheckLibWithHeader(
+	'libfaad', 'faad.h', 'c++',
+	call = 'faacDecInit2(0, 0, 0, (unsigned long*)0, (unsigned char*)0);')
+if not have_faad_26:	# This is here to prevent linking faad twice (only do one CheckLib)
+	have_faad = conf.CheckLib('faad')
+else:
+	have_faad=have_faad_26
+
 have_m4a = have_mp4 and have_faad
 flags_m4a = getFlags(env, 'm4a', 0)
 if int(flags_m4a) and not have_m4a:
@@ -1007,20 +1020,12 @@ flags_m4a = getFlags(env, 'm4a', 0)
 if int(flags_m4a):
 	print "Apple M4A audio file support...",
 	if have_m4a:
-                print "enabled"
+		print "enabled"
 
-                # We have to check for libfaad version 2.6 or 2.7. In libfaad
-                # version 2.7, the type for the samplerate is unsigned long*,
-                # while in 2.6 the type is uint32_t*. We can use the optional
-                # call parameter to CheckLibWithHeader to build a test file to
-                # check which one this faad.h supports.
-                ulong = conf.CheckLibWithHeader(
-                        'libfaad', 'faad.h', 'c++',
-                        call = 'faacDecInit2(0, 0, 0, (unsigned long*)0, (unsigned char*)0);')
-                # If the compile did not work, then enable the M4AHACK define.
-                if not ulong:
-                        env.Append(CPPDEFINES = '__M4AHACK__')
-                        print "libfaad 2.6 compatibility mode... enabled"
+		# If the compile did not work, then enable the M4AHACK define.
+		if have_faad_26:
+			env.Append(CPPDEFINES = '__M4AHACK__')
+			print "libfaad 2.6 compatibility mode... enabled"
 
 	#	env.ParseConfig('pkg-config libmp4v2-dev --silence-errors --cflags --libs') # no pkg-config data for libmp4v2-dev
 	#	FIXME: should do conf.CheckCHeader('mp4.h') or something...
