--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -553,13 +553,13 @@ have_mp4 = conf.CheckLib('mp4v2') or conf.CheckLib('mp4')
 # while in 2.6 the type is uint32_t*. We can use the optional
 # call parameter to CheckLibWithHeader to build a test file to
 # check which one this faad.h supports.
-have_faad_26 = conf.CheckLibWithHeader(
-	'libfaad', 'faad.h', 'c++',
-	call = 'faacDecInit2(0, 0, 0, (unsigned long*)0, (unsigned char*)0);')
+have_faad_26 = (not conf.CheckLibWithHeader(
+                'libfaad', 'faad.h', 'c++',
+                call = 'faacDecInit2(0, 0, 0, (unsigned long*)0, (unsigned char*)0);'))
 if not have_faad_26:	# This is here to prevent linking faad twice (only do one CheckLib)
 	have_faad = conf.CheckLib('faad')
 else:
-	have_faad=have_faad_26
+	have_faad = have_faad_26
 
 have_m4a = have_mp4 and have_faad
 flags_m4a = getFlags(env, 'm4a', 0)
@@ -1031,7 +1031,7 @@ if int(flags_m4a):
 	#	FIXME: should do conf.CheckCHeader('mp4.h') or something...
 		env.Append(CPPDEFINES = '__M4A__')
 		build_flags += 'm4a '
-		sources += Split("""soundsourcem4a.cpp m4a/mp4-mixxx.cpp""");  # MP4/M4A Support
+		sources += Split("""soundsourcem4a.cpp""");  # MP4/M4A Support
 		env.Append(LIBS = 'libmp4v2')
 		env.Append(LIBS = 'libfaad')
 	else:
