--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -212,8 +212,6 @@ vars.Add('ffmpeg', '(EXPERIMENTAL) Set to 1 to enable FFMPEG support', 0)
 vars.Add('vinylcontrol', 'Set to 1 to enable vinyl control support', 1)
 vars.Add('shoutcast', 'Set to 1 to enable shoutcast support', 0)
 vars.Add('cmetrics', 'Set to 1 to enable crash reporting/usage statistics via Case Metrics (This should be disabled on development builds)', 0)
-vars.Add('optimize', 'Set to:\n  1 for -O3 compiler optimizations\n  2 for Pentium 4 optimizations\n  3 for Intel Core optimizations\n  4 for Intel Core 2 optimizations\n  5 for Athlon-4/XP/MP optimizations\n  6 for K8/Opteron/AMD64 optimizations\n  7 for K8/Opteron/AMD64 w/ SSE3\n  8 for Celeron D (generic SSE/SSE2/SSE3) optimizations.', 1)
-vars.Add('tuned', 'Set to 1 to optimize mixxx for this CPU (overrides "optimize")', 0)
 vars.Add('asmlib','(EXPERIMENTAL) Set to 1 to enable linking against Agner Fog\'s hand-optimized asmlib, found at http://www.agner.org/optimize/', 0)
 vars.Add('script', 'Set to 1 to enable MixxxScript/QtScript Studio support.', 0)
 vars.Add('midiscript', 'Set to 1 to enable MIDI Scripting support.', 1)
@@ -222,9 +220,14 @@ vars.Add('m4a','Set to 1 to enable support for M4A audio (Apple non-drm''d music
 vars.Add('qdebug', 'Set to 1 to enable verbose console debug output.', 1)
 vars.Add('test', 'Set to 1 to build Mixxx test fixtures.', 0)
 if not 'win' in platform:
+	vars.Add('tuned', 'Set to 1 to optimize mixxx for this CPU (overrides "optimize")', 0)
+	vars.Add('optimize', 'Set to:\n  1 for -O3 compiler optimizations\n  2 for Pentium 4 optimizations\n  3 for Intel Core optimizations\n  4 for Intel Core 2 optimizations\n  5 for Athlon-4/XP/MP optimizations\n  6 for K8/Opteron/AMD64 optimizations\n  7 for K8/Opteron/AMD64 w/ SSE3\n  8 for Celeron D (generic SSE/SSE2/SSE3) optimizations.', 1)
 	vars.Add('gprof', '(DEVELOPER) Set to 1 to enable profiling using gprof', 0)
 	vars.Add('force32', 'Set to 1 to force GCC to compile a 32-bit binary with the -m32 flag', 0)
 else:
+	if platform == 'win64':
+		vars.Add('tuned', 'Set to 1 to optimize mixxx for this CPU class', 0)
+	vars.Add('optimize', 'Set to:\n  1 to maximize speed (/O2)\n  2 for maximum optimizations (/Ox)\n  3 to use SSE code\n  4 to use SSE2 code.', 1)
 	vars.Add('msvshacks', 'Set to 1 to build properly with MS Visual Studio 2005 (Express users should leave this off)', 0)
 	vars.Add('msvcdebug', 'Set to 1 to link against MS libraries with debugging info (implies debug=1)', 0)
 #env = Environment(options = opts)
@@ -546,19 +549,24 @@ if not conf.CheckLib('ogg'):
 	Exit(1)
 
 #hack: check for these here, before conf.Finish happens
-have_mp4 = conf.CheckLib('mp4v2') or conf.CheckLib('mp4')
 have_mp4v2_h = conf.CheckHeader('mp4v2/mp4v2.h')
+have_mp4 = (have_mp4v2_h and (conf.CheckLib('mp4v2') or conf.CheckLib('libmp4v2'))) or conf.CheckLib('mp4')
 
 # We have to check for libfaad version 2.6 or 2.7. In libfaad
 # version 2.7, the type for the samplerate is unsigned long*,
 # while in 2.6 the type is uint32_t*. We can use the optional
 # call parameter to CheckLibWithHeader to build a test file to
 # check which one this faad.h supports.
-have_faad_26 = (not conf.CheckLibWithHeader(
-                'libfaad', 'faad.h', 'c++',
-                call = 'faacDecInit2(0, 0, 0, (unsigned long*)0, (unsigned char*)0);'))
+if not 'win' in platform:	# This check doesn't work correctly on Windows
+							# And we build it manually anyway, so we know it's v2.7
+	have_faad_26 = (not conf.CheckLibWithHeader(
+					'libfaad', 'faad.h', 'c++',
+					call = 'faacDecInit2(0, 0, 0, (unsigned long*)0, (unsigned char*)0);'))
+else:
+	have_faad_26 = 0
+
 if not have_faad_26:	# This is here to prevent linking faad twice (only do one CheckLib)
-	have_faad = conf.CheckLib('faad')
+	have_faad = conf.CheckLib('faad') or conf.CheckLib('libfaad')
 else:
 	have_faad = have_faad_26
 
@@ -811,28 +819,28 @@ if 'win' in platform:
 
 #SoundTouch
 #XXX this should be done with a subsconscript
-env.Append(CPPPATH=['#lib/soundtouch-1.4.1'])
+env.Append(CPPPATH=['#lib/soundtouch-1.5.0'])
 sources += Split("""engine/enginebufferscalest.cpp
-                    #lib/soundtouch-1.4.1/SoundTouch.cpp
-                    #lib/soundtouch-1.4.1/TDStretch.cpp
-                    #lib/soundtouch-1.4.1/RateTransposer.cpp
-                    #lib/soundtouch-1.4.1/AAFilter.cpp
-                    #lib/soundtouch-1.4.1/FIFOSampleBuffer.cpp
-                    #lib/soundtouch-1.4.1/FIRFilter.cpp
-                    #lib/soundtouch-1.4.1/PeakFinder.cpp
-                    #lib/soundtouch-1.4.1/BPMDetect.cpp
+                    #lib/soundtouch-1.5.0/SoundTouch.cpp
+                    #lib/soundtouch-1.5.0/TDStretch.cpp
+                    #lib/soundtouch-1.5.0/RateTransposer.cpp
+                    #lib/soundtouch-1.5.0/AAFilter.cpp
+                    #lib/soundtouch-1.5.0/FIFOSampleBuffer.cpp
+                    #lib/soundtouch-1.5.0/FIRFilter.cpp
+                    #lib/soundtouch-1.5.0/PeakFinder.cpp
+                    #lib/soundtouch-1.5.0/BPMDetect.cpp
                     """)
 
 if 'win' in platform:
 	if platform == 'win32':
-		sources += Split("""#lib/soundtouch-1.4.1/cpu_detect_x86_win.cpp""")
+		sources += Split("""#lib/soundtouch-1.5.0/cpu_detect_x86_win.cpp""")
 	if platform == 'win64':
-		sources += Split("""#lib/soundtouch-1.4.1/cpu_detect_x64_win.cpp""")
+		sources += Split("""#lib/soundtouch-1.5.0/cpu_detect_x64_win.cpp""")
 else:
 	if machine == 'x86_64':
-		sources += Split("""#lib/soundtouch-1.4.1/cpu_detect_x64_gcc.cpp""")
+		sources += Split("""#lib/soundtouch-1.5.0/cpu_detect_x64_gcc.cpp""")
 	else:
-		sources += Split("""#lib/soundtouch-1.4.1/cpu_detect_x86_gcc.cpp""")
+		sources += Split("""#lib/soundtouch-1.5.0/cpu_detect_x86_gcc.cpp""")
 
 
 #KissFFT
@@ -1150,13 +1158,18 @@ if int(flags_tuned):
 		else:
 			print "Optimizing for this CPU... no (requires gcc >= 4.2.0)"
 	else:
-		if platform == 'win64':	# In addition
+		if platform == 'win64':
 			print "Optimizing for this CPU class (" + machine + ")... yes"
 			env.Append(CXXFLAGS = '/favor:' + machine)
 		else:
 			print "Optimizing for this CPU... no (not supported on 32-bit MSVC)"
 else:
-	print "Optimizing for this CPU... no"
+	if platform == 'win64':
+		if 'makerelease' in COMMAND_LINE_TARGETS:
+			print "Optimizing for this CPU class... no\n  (using AMD64 due to makerelease)"
+			# AMD64 architecture is used by all consumer 64-bit CPUs, even Intel ones.
+			# IA64 is the Itanium processors, which we don't expect anyone to be using for DJing. :)
+			env.Append(CXXFLAGS = '/favor:AMD64')
 
 #Specific optimization
 flags_optimize = getFlags(env, 'optimize', 1)
@@ -1164,20 +1177,28 @@ if int(flags_optimize):
 	if 'win' in platform:
 		if platform == 'win64':
 			env.Append(LINKFLAGS = '/MACHINE:X64')
-		if int(flags_msvcdebug):
-			print "Optimizations... DISABLED DUE TO DEBUG"
 		else:
-			print "Optimizations... enabled"
-			env.Append(CXXFLAGS = '/O2 /GL')
+			env.Append(LINKFLAGS = '/MACHINE:X86')
+		if int(flags_msvcdebug):
+			print "Specific optimizations... DISABLED DUE TO DEBUG"
+		else:
+			print "Specific optimizations... enabled"
+			build_flags += 'optimize=' + str(flags_optimize) + ' '
+			env.Append(CXXFLAGS = '/GL /MP')
 			env.Append(LINKFLAGS = '/LTCG:STATUS')
-			if platform == 'win64':	# In addition
-				if 'makerelease' in COMMAND_LINE_TARGETS:
-					# env.Append(CXXFLAGS = '/Ox /favor:blend /MP')
-					# AMD64 architecture is used by all consumer 64-bit CPUs, even Intel ones.
-					# IA64 is the Itanium processors, which we don't expect anyone to be using for DJing. :)
-					env.Append(CXXFLAGS = '/Ox /favor:AMD64 /MP')
-				else:
-					env.Append(CXXFLAGS = '/Ox /favor:' + machine + ' /MP')
+			if flags_optimize=='1':
+				print "  Maximize speed (/O2)"
+				env.Append(CXXFLAGS = '/O2')
+			elif flags_optimize >= '2':
+				print "  Maximum optimizations (/Ox)"
+				env.Append(CXXFLAGS = '/Ox')
+			if not platform == 'win64':
+				if flags_optimize == '3':
+					print "  SSE instructions enabled"
+					env.Append(CXXFLAGS = '/arch:SSE')
+				elif flags_optimize == '4':
+					print "  SSE2 instructions enabled"
+					env.Append(CXXFLAGS = '/arch:SSE2')
 	else:
 		if not int(flags_tuned):
 			print "Specific optimizations... enabled"
@@ -1242,13 +1263,13 @@ else:
 # enabled. It's dumb that they appear here, but they make the most sense next to
 # the optimization stuff. It's safe to assume that if opt > 1, then MMX and SSE
 # are enabled.
-if int(flags_optimize) > 1:
-    sources += Split("""#lib/soundtouch-1.4.1/mmx_optimized.cpp #lib/soundtouch-1.4.1/sse_optimized.cpp""")
+if (not 'win' in platform and int(flags_optimize) > 1) or ('win' in platform and int(flags_optimize) > 2):
+    sources += Split("""#lib/soundtouch-1.5.0/mmx_optimized.cpp #lib/soundtouch-1.5.0/sse_optimized.cpp""")
     env.Append(CPPDEFINES='ALLOW_X86_OPTIMIZATIONS')
 
 # Enable SoundTouch Windows 3dNow optimizations if we're on AMD
-if 'win' in platform and int(flags_optimize) in (5,6,7):
-    sources += Split("""#lib/soundtouch-1.4.1/3dnow_win.cpp""")
+if 'win' in platform and not 'makerelease' in COMMAND_LINE_TARGETS and 'AMD' in machine:
+    sources += Split("""#lib/soundtouch-1.5.0/3dnow_win.cpp""")
 
 #Debugging output
 flags_qdebug = getFlags(env, 'qdebug', 0)
