--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -797,7 +797,7 @@ env.Uic4('dlgprefeqdlg.ui')
 env.Uic4('dlgprefcrossfaderdlg.ui')
 env.Uic4('dlgprefbpmdlg.ui')
 env.Uic4('dlgbpmschemedlg.ui')
-env.Uic4('dlgbpmtapdlg.ui')
+# env.Uic4('dlgbpmtapdlg.ui')
 env.Uic4('dlgprefvinyldlg.ui')
 env.Uic4('dlgprefrecorddlg.ui')
 env.Uic4('dlgaboutdlg.ui')
