--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -387,6 +387,7 @@ sources = Split("""
                 widget/wlibrarytextbrowser.cpp
                 library/preparecratedelegate.cpp
                 library/trackcollection.cpp
+                library/basesqltablemodel.cpp
                 library/librarytablemodel.cpp
                 library/preparelibrarytablemodel.cpp
                 library/browsetablemodel.cpp
