The primer timer was an unwitting hack! We've been calling script functions from the wrong thread! - Fixed the threading issues, now everything script-related (except initial code loading because I don't know how to make it block) happens in the ScriptEngine thread where it belongs. Removed the primer timer and things test good on Windows x86. TODO: correct the order of shutdown by making a MidiScriptEngine::gracefulShutdown function that stops all timers, runs the shutdown function, and does quit() (taking that out of the destructor.) Then the MidiMapping can do scriptengine->wait() so it doesn't delete it too early. Thanks to RJ for this info.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -1243,7 +1243,7 @@ if int(flags_optimize) > 1:
     env.Append(CPPDEFINES='ALLOW_X86_OPTIMIZATIONS')
 
 # Enable SoundTouch Windows 3dNow optimizations if we're on AMD
-if 'win' in platform and int(flags_optimize) in (5,6,7):
+if 'win' in platform and not 'makerelease' in COMMAND_LINE_TARGETS and 'AMD' in machine:
     sources += Split("""#lib/soundtouch-1.4.1/3dnow_win.cpp""")
 
 #Debugging output
