Fixed keyboard and MIDI control of the library... for now....

--- a/mixxx/res/keyboard/Standard.kbd.cfg
+++ b/mixxx/res/keyboard/Standard.kbd.cfg
@@ -2,13 +2,6 @@
 crossfader_up h
 crossfader_down g
 
-[Playlist]
-SelectNextTrack Down
-SelectPrevTrack Up
-LoadSelectedIntoFirstStopped Return
-SelectNextPlaylist Right
-SelectPrevPlaylist Left
-
 [Channel1]
 play d
 cue_default e 
@@ -35,6 +28,7 @@ temporalShape_up q
 temporalShape_down w
 temporalPhase_up Shift+q
 temporalPhase_down Shift+w
+beatloop v
 
 [Channel2]
 play l
@@ -62,3 +56,4 @@ temporalShape_up u
 temporalShape_down i
 temporalPhase_up Shift+u
 temporalPhase_down Shift+i
+beatloop b
