* Main SoundSource changes:     * Refactored SoundSource classes so they have no knowledge of     TrackInfoObject.     * Added all the metadata fields we need to SoundSource.     * Refactored SoundSource interface to separate opening an audio file     (open()) and parsing metadata headers (parseHeader()). Some SoundSources     need to start their decoders before they can determine certain useful     things like samplerates, so this helps clean up the code surrounding that.     * The header parsing function is no longer static. * SoundSourceM4A changes:     * Cleaned up a bunch of variables that were duplicated from SoundSource     * Moved decoder initialization to its own function.     * Fix parsing of UTF8 filenames and out-of-scope pointer use.     * Added album, year, and genre parsing.     * Parse the number of channels and samplerate properly     * M4A plugin no longer needs to build against internal Mixxx source files,     except for soundsource.cpp (can virtual inheritance or something fix     that?)     * Removed unneeded Qt dependencies from M4A plugin * SoundSource Plugin Downloader:     * Added start of audio plugin downloader     * Started adding audio plugin downloader stuff to Library prefs pane. * Assorted other changes:     * Removed deprecated Qt3Support stuff from SoundSource     * Fixed some possibly uninitialized varibles in SoundSource. :)     * Removed hardcoded supported audio filetypes and regex string, now     determined at runtime using static methods in SoundSourceProxy.     * Ignored setBpmConfirm() stuff generally... What's the deal with this?     * Made each SoundSource implement a supportedFileExtensions() function.     * Removed defs_audiofiles.h, all support audio filetypes (including those     supported by plugins) are determined at runtime using     SoundSourceProxy::supportedFileExtensions(),     SoundSourceProxy::supportedFileExtensionsString(),     or SoundSourceProxy::supportedFileExtensionsRegex().     * Shuffled a bunch of So

--- a/mixxx/SConstruct
+++ b/mixxx/SConstruct
@@ -43,8 +43,8 @@ build_dir = '%s_build' % platform
 Export('platform')
 Export('build_dir')
 
-SConscript(File('src/SConscript'), build_dir=Dir(build_dir), duplicate=0) 
-SConscript(File('plugins/SConscript'), build_dir=Dir(build_dir + "/plugins"), duplicate=0) 
+soundsource_plugins = SConscript(File('plugins/SConscript'), build_dir=Dir(build_dir + "/plugins"), duplicate=0)
+SConscript(File('src/SConscript'), build_dir=Dir(build_dir), duplicate=0, exports='soundsource_plugins') 
 #wtf doesn't this work on win32 (works on Linux, OS X):
 Command("mixxx", os.path.join(build_dir, "mixxx"), Copy("$TARGET", "$SOURCE"))
 
