Adding a waveform signal renderer that renders the signal by separating the waveform into slices and making cached, small pixmaps of them. It's not switched on by default (though it's added to the SConscript) and it isn't finished. My Qt and my graphics card don't work together so I'm switching to another computer.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -445,6 +445,7 @@ sources = Split("""
                 waveform/waveformrenderer.cpp
 		waveform/waveformrenderbackground.cpp
 		waveform/waveformrendersignal.cpp
+                waveform/waveformrendersignaltiles.cpp
 		waveform/waveformrendersignalpixmap.cpp
 		waveform/waveformrendermark.cpp
                 waveform/waveformrendermarkrange.cpp
