A ton of build system fixes to make the plugin stuff build and load properly on OS X

--- a/mixxx/plugins/SConscript
+++ b/mixxx/plugins/SConscript
@@ -5,6 +5,6 @@ Import('build_dir')
 
 plugins = [] 
 soundsourcem4a = SConscript(File('soundsourcem4a/SConscript'), build_dir=Dir(build_dir), duplicate=0) 
-plugins.append(soundsourcem4a)
+plugins.extend(soundsourcem4a)
 
 Return("plugins")
