First incarnation of the MessageBoxHandler class. It doesn't work because you can't even set QMessageBox properties unless you're in the GUI thread...so much for flexibility.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -343,6 +343,7 @@ sources = Split("""
                 mixxx.cpp
                 mixxxview.cpp
                 errordialog.cpp
+                messageboxhandler.cpp
                 upgrade.cpp
 
                 soundsource.cpp
