--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -342,7 +342,7 @@ sources = Split("""
                 mixxxcontrol.cpp
                 mixxx.cpp
                 mixxxview.cpp
-                errordialog.cpp
+                errordialoghandler.cpp
                 upgrade.cpp
 
                 soundsource.cpp
