--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -585,11 +585,11 @@ if int(flags_m4a) and not have_m4a:
 
 ## Check for OpenGL (it's messy to do it for all three platforms)
 ## XXX this should *NOT* have hardcoded paths like this
-if not conf.CheckLib('GL') and not conf.CheckLib('opengl32') and not conf.CheckCHeader('/System/Library/Frameworks/OpenGL.framework/Versions/A/Headers/gl.h') and not conf.CheckCHeader('GL/gl.h'):
+if not conf.CheckLib('GL') and not conf.CheckCHeader('GL/gl.h') and not conf.CheckLib('opengl32') and not conf.CheckCHeader('/System/Library/Frameworks/OpenGL.framework/Versions/A/Headers/gl.h'):
 	print 'Did not find OpenGL development files, exiting!'
 	Exit(1)
 
-if not conf.CheckLib('GLU') and not conf.CheckLib('glu32') and not conf.CheckCHeader('/System/Library/Frameworks/OpenGL.framework/Versions/A/Headers/glu.h'):
+if not conf.CheckLib('GLU') and not conf.CheckCHeader('GL/glu.h') and not conf.CheckLib('glu32') and not conf.CheckCHeader('/System/Library/Frameworks/OpenGL.framework/Versions/A/Headers/glu.h'):
 	print 'Did not find GLU development files, exiting!'
 	Exit(1)
 
@@ -597,18 +597,13 @@ if not conf.CheckLib('GLU') and not conf.CheckLib('glu32') and not conf.CheckCHe
 CheckFFMPEG(conf, sources)
 
 #Check for PortTime
-if not conf.CheckHeader(['porttime.h']):
-	print "Did not find PortTime development header, exiting!"
+if not conf.CheckLib(['porttime', 'libporttime']) and not conf.CheckHeader(['porttime.h']):
+	print "Did not find PortTime or its development headers, exiting!"
 	Exit(1)
 
-if not platform == 'osx':   # OSX doesn't need PortTime for some reason
-	if not conf.CheckLib(['porttime', 'libporttime']):
-		print "Did not find PortTime or it\'s development headers, exiting!"
-		Exit(1)
-
 #Check for PortMIDI & PortTime
-if not conf.CheckLib(['portmidi', 'libportmidi']):
- 	print "Did not find PortMidi or it\'s development headers, exiting!"
+if not conf.CheckLib(['portmidi', 'libportmidi']) and not conf.CheckHeader(['portmidi.h']):
+ 	print "Did not find PortMidi or its development headers, exiting!"
  	Exit(1)
 
 
