--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -1108,6 +1108,8 @@ if int(flags_optimize):
 					env.Append(CXXFLAGS = '/Ox /favor:AMD64 /MP')
 				else:
 					env.Append(CXXFLAGS = '/Ox /favor:' + machine + ' /MP')
+			else:
+				env.Append(CXXFLAGS = '/arch:SSE')
 	else:
 		print "Optimizations... enabled"
 		build_flags += 'optimize=' + str(flags_optimize) + ' '
