--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -219,6 +219,7 @@ vars.Add('tonal', 'Set to 1 to enable tonal analysis', 0)
 vars.Add('m4a','Set to 1 to enable support for M4A audio (Apple non-drm''d music format)', 0)
 vars.Add('qdebug', 'Set to 1 to enable verbose console debug output.', 1)
 vars.Add('test', 'Set to 1 to build Mixxx test fixtures.', 0)
+vars.Add('flac', 'Set to 1 to enable FLAC support (lossless open-source music format)', 0)
 if not 'win' in platform:
 	vars.Add('tuned', 'Set to 1 to optimize mixxx for this CPU (overrides "optimize")', 0)
 	vars.Add('optimize', 'Set to:\n  1 for -O3 compiler optimizations\n  2 for Pentium 4 optimizations\n  3 for Intel Core optimizations\n  4 for Intel Core 2 optimizations\n  5 for Athlon-4/XP/MP optimizations\n  6 for K8/Opteron/AMD64 optimizations\n  7 for K8/Opteron/AMD64 w/ SSE3\n  8 for Celeron D (generic SSE/SSE2/SSE3) optimizations.', 1)
@@ -582,6 +583,18 @@ if int(flags_m4a) and not have_m4a:
         if not have_faad:
                 print 'Did not find libfaad or the libfaad development headers, exiting!'
         Exit(1)
+
+have_flac = False
+if int(getFlags(env, 'flac', 0)):
+	if not conf.CheckHeader('FLAC/stream_decoder.h'):
+		print 'Did not find libFLAC development headers, exiting!'
+		Exit(1)
+	elif not conf.CheckLib(['libFLAC', 'FLAC']):
+		print 'Did not find libFLAC development libraries, exiting!'
+		Exit(1)
+	else:
+		have_flac = True
+	
 
 ## Check for OpenGL (it's messy to do it for all three platforms)
 ## XXX this should *NOT* have hardcoded paths like this
@@ -1058,6 +1071,16 @@ if int(flags_m4a):
 else:
 	print "Apple M4A audio file support... disabled"
 
+if int(getFlags(env, 'flac', 0)):
+	print "libFLAC support ...",
+	if have_flac:
+		print "enabled"
+		build_flags += 'flac '
+		sources += Split(""" soundsourceflac.cpp """)
+		env.Append(LIBS = 'libFLAC')
+		env.Append(CPPDEFINES = '__LIBFLAC__')
+	else:
+		print "disabled"
 
 def build_gtest():
 	gtest_dir = env.Dir("#lib/gtest-1.3.0")
